<?xml version="1.0"?>
<package>
  <name>marker_teleop</name>
  <version>0.0.0</version>
  <description>Interactive marker teleoperation.</description>

  <maintainer email="enrique.fernandez@pal-robotics.com">Enrique Fernández</maintainer>
  <author email="enrique.fernandez@pal-robotics.com">Enrique Fernández</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
</package>
